--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 
 header {
   background-color: rgb(173, 216, 230);
-  height: 100px;
+  min-height: 100px;
 }
 
 section {
@@ -14,6 +14,10 @@ section {
 
 .flex {
   display: flex;
+}
+
+.main-secion {
+  padding: 2rem 0;
 }
 
 .header-section {
@@ -45,29 +49,29 @@ section {
 
 .bluebkg {
   background-color: rgb(0, 0, 139);
-  height: 500px;
+  min-height: 500px;
 }
 
 .single-box {
   background-color: rgb(238, 130, 238);
-  height: 400px;
+  min-height: 400px;
   border: dotted black 4px;
   border-radius: 10px;
 }
 
 .column-div {
-  height: 500px;
+  min-height: 500px;
 }
 
 .big-col {
-  height: 400px;
+  min-height: 400px;
   width: 65%;
   background-color: rgb(30, 144, 255);
   border: dotted black 2px;
 }
 
 .small-col {
-  height: 400px;
+  min-height: 400px;
   width: 35%;
   background-color: pink;
   border: dotted black 2px;
@@ -90,11 +94,11 @@ section {
 
 .blackbkg1 {
   background-color: #23272a;
-  height: 500px;
+  min-height: 500px;
 }
 
 .pink-col {
-  height: 450px;
+  min-height: 450px;
   width: 30%;
   margin-top: -10px;
   background-color: rgb(240, 128, 128);
@@ -102,7 +106,7 @@ section {
 }
 
 .blue-col {
-  height: 450px;
+  min-height: 450px;
   width: 70%;
   margin-top: -10px;
   background-color: rgb(32, 178, 170);
